--- a/DofusMaster/DofusMaster.csproj
+++ b/DofusMaster/DofusMaster.csproj
@@ -167,5 +167,8 @@
   <ItemGroup>
     <Resource Include="icon.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\info.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
